--- a/AppleMusicStApp/AppleMusicStApp/StoryBoard/Base.lproj/ .storyboard
+++ b/AppleMusicStApp/AppleMusicStApp/StoryBoard/Base.lproj/ .storyboard
@@ -21,13 +21,13 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sLk-NH-CqM">
                                     <size key="itemSize" width="180" height="240"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="headerReferenceSize" width="50" height="296"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TrackCollecionViewCell" id="dqV-hs-AGP" customClass="TrackCollecionViewCell" customModule="AppleMusicStApp" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="20" width="180" height="240"/>
+                                        <rect key="frame" x="20" y="316" width="180" height="240"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cpQ-WW-VnA">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="240"/>
@@ -71,6 +71,68 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Irw-3r-tlh" customClass="TrackCollectionHeaderView" customModule="AppleMusicStApp" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="296"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Pick!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJP-fF-ntc">
+                                            <rect key="frame" x="20" y="30" width="184" height="36"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="la2-1u-go6">
+                                            <rect key="frame" x="24" y="73" width="365" height="200"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="u7B-Nr-gUR"/>
+                                            </constraints>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jzl-Q7-fmN">
+                                            <rect key="frame" x="24" y="73" width="365" height="200"/>
+                                            <connections>
+                                                <action selector="cardTapped:" destination="Irw-3r-tlh" eventType="touchUpInside" id="mNJ-uV-Gmk"/>
+                                            </connections>
+                                        </button>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="play.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7ij-tg-j9F">
+                                            <rect key="frame" x="348" y="235" width="31" height="33"/>
+                                            <color key="tintColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Play now!!ddddddfadfasdfkld mfmkmsdmf admfsa mfm ms; dfmad fa msd fa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bza-3v-grA">
+                                            <rect key="frame" x="34" y="234.5" width="285.5" height="33.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Play now!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="de6-uf-xVO">
+                                            <rect key="frame" x="34" y="217.5" width="71.5" height="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="7ij-tg-j9F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Bza-3v-grA" secondAttribute="trailing" constant="15" id="10f-pL-lBt"/>
+                                        <constraint firstItem="fJP-fF-ntc" firstAttribute="top" secondItem="Irw-3r-tlh" secondAttribute="top" constant="30" id="27I-n1-BKs"/>
+                                        <constraint firstItem="Bza-3v-grA" firstAttribute="leading" secondItem="la2-1u-go6" secondAttribute="leading" constant="10" id="5fA-hL-2iT"/>
+                                        <constraint firstItem="la2-1u-go6" firstAttribute="leading" secondItem="Irw-3r-tlh" secondAttribute="leading" constant="24" id="7f7-dU-zPg"/>
+                                        <constraint firstItem="7ij-tg-j9F" firstAttribute="trailing" secondItem="la2-1u-go6" secondAttribute="trailing" constant="-10" id="8FM-cO-LMV"/>
+                                        <constraint firstItem="Jzl-Q7-fmN" firstAttribute="leading" secondItem="la2-1u-go6" secondAttribute="leading" id="9OE-0f-lHR"/>
+                                        <constraint firstAttribute="trailing" secondItem="la2-1u-go6" secondAttribute="trailing" constant="25" id="AUu-tA-YaP"/>
+                                        <constraint firstItem="la2-1u-go6" firstAttribute="top" secondItem="fJP-fF-ntc" secondAttribute="bottom" constant="7" id="D2u-uH-0H5"/>
+                                        <constraint firstItem="7ij-tg-j9F" firstAttribute="bottom" secondItem="la2-1u-go6" secondAttribute="bottom" constant="-5" id="GNf-G7-bsk"/>
+                                        <constraint firstItem="de6-uf-xVO" firstAttribute="leading" secondItem="la2-1u-go6" secondAttribute="leading" constant="10" id="P0J-UM-yX9"/>
+                                        <constraint firstItem="Jzl-Q7-fmN" firstAttribute="trailing" secondItem="la2-1u-go6" secondAttribute="trailing" id="Pqf-90-Wix"/>
+                                        <constraint firstItem="Jzl-Q7-fmN" firstAttribute="top" secondItem="la2-1u-go6" secondAttribute="top" id="XNk-ys-Nhl"/>
+                                        <constraint firstItem="Bza-3v-grA" firstAttribute="top" secondItem="de6-uf-xVO" secondAttribute="bottom" id="b1a-VQ-K5P"/>
+                                        <constraint firstItem="fJP-fF-ntc" firstAttribute="leading" secondItem="Irw-3r-tlh" secondAttribute="leading" constant="20" id="hdt-3Y-H6x"/>
+                                        <constraint firstItem="Jzl-Q7-fmN" firstAttribute="bottom" secondItem="la2-1u-go6" secondAttribute="bottom" id="jBn-pg-4av"/>
+                                        <constraint firstItem="Bza-3v-grA" firstAttribute="bottom" secondItem="la2-1u-go6" secondAttribute="bottom" constant="-5" id="nAc-Zk-TcT"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="descriptionLabel" destination="Bza-3v-grA" id="U63-IR-So8"/>
+                                        <outlet property="thumbnailImageView" destination="la2-1u-go6" id="kSA-kk-cwr"/>
+                                    </connections>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="yvK-sB-JnZ"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="7mx-ZA-W3D"/>
@@ -92,4 +154,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="play.circle.fill" catalog="system" width="128" height="121"/>
+    </resources>
 </document>
