update netflix app

--- a/MyNetflix/MyNetflix/Player.storyboard
+++ b/MyNetflix/MyNetflix/Player.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,25 +15,84 @@
                         <rect key="frame" x="0.0" y="0.0" width="812" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T0Q-4y-bTn">
-                                <rect key="frame" x="706" y="42" width="39" height="30"/>
-                                <state key="normal" title="Close"/>
-                                <connections>
-                                    <action selector="closeButtonTapped:" destination="mbs-Ed-6wm" eventType="touchUpInside" id="CXF-dh-dQv"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dRZ-Hs-NRh" customClass="PlayerView" customModule="MyNetflix" customModuleProvider="target">
+                                <rect key="frame" x="44" y="0.0" width="724" height="375"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJx-EL-dNp">
+                                <rect key="frame" x="44" y="0.0" width="724" height="375"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fI2-QG-vxd">
+                                        <rect key="frame" x="342" y="167.66666666666666" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="EQF-x7-uAV"/>
+                                            <constraint firstAttribute="width" constant="40" id="mSj-oA-KUx"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="play.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
+                                        </state>
+                                        <state key="selected" image="pause.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="togglePlayButton:" destination="mbs-Ed-6wm" eventType="touchUpInside" id="BCy-dI-1Xa"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHg-eg-3kP">
+                                        <rect key="frame" x="674" y="16" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="GIt-H7-jhD"/>
+                                            <constraint firstAttribute="width" constant="30" id="f3w-wM-BeU"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="xmark" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="closeButtonTapped:" destination="mbs-Ed-6wm" eventType="touchUpInside" id="kgK-eO-byp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="NHg-eg-3kP" firstAttribute="top" secondItem="bJx-EL-dNp" secondAttribute="top" constant="16" id="5bY-35-chj"/>
+                                    <constraint firstItem="fI2-QG-vxd" firstAttribute="centerY" secondItem="bJx-EL-dNp" secondAttribute="centerY" id="7Vf-EU-wrj"/>
+                                    <constraint firstItem="fI2-QG-vxd" firstAttribute="centerX" secondItem="bJx-EL-dNp" secondAttribute="centerX" id="MNu-Iw-dns"/>
+                                    <constraint firstAttribute="trailing" secondItem="NHg-eg-3kP" secondAttribute="trailing" constant="20" id="dRC-yz-fDT"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="T0Q-4y-bTn" firstAttribute="leading" secondItem="Du5-Th-wYi" secondAttribute="leading" constant="662" id="6M9-Be-Rbu"/>
-                            <constraint firstItem="T0Q-4y-bTn" firstAttribute="top" secondItem="Du5-Th-wYi" secondAttribute="top" constant="42" id="vID-mj-x4M"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="leading" secondItem="dRZ-Hs-NRh" secondAttribute="leading" id="DlU-nw-z97"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="top" secondItem="dRZ-Hs-NRh" secondAttribute="top" id="EVe-1i-tF5"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="top" secondItem="dRZ-Hs-NRh" secondAttribute="top" id="HOl-YA-QeP"/>
+                            <constraint firstItem="Du5-Th-wYi" firstAttribute="trailing" secondItem="dRZ-Hs-NRh" secondAttribute="trailing" id="KlK-8G-QtW"/>
+                            <constraint firstAttribute="bottom" secondItem="dRZ-Hs-NRh" secondAttribute="bottom" id="Q26-zy-hvW"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="leading" secondItem="dRZ-Hs-NRh" secondAttribute="leading" id="fXg-KG-J1s"/>
+                            <constraint firstItem="dRZ-Hs-NRh" firstAttribute="top" secondItem="Dq2-Lt-FjU" secondAttribute="top" id="g1B-vV-4Jb"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="width" secondItem="dRZ-Hs-NRh" secondAttribute="width" id="l4Y-Vx-7iP"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="top" secondItem="dRZ-Hs-NRh" secondAttribute="top" id="q4T-TJ-q9y"/>
+                            <constraint firstItem="dRZ-Hs-NRh" firstAttribute="leading" secondItem="Du5-Th-wYi" secondAttribute="leading" id="v4Q-0E-qBd"/>
+                            <constraint firstItem="bJx-EL-dNp" firstAttribute="height" secondItem="dRZ-Hs-NRh" secondAttribute="height" id="vNJ-8o-q3X"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Du5-Th-wYi"/>
                     </view>
+                    <connections>
+                        <outlet property="controllView" destination="bJx-EL-dNp" id="6En-Fy-8bd"/>
+                        <outlet property="playButton" destination="fI2-QG-vxd" id="iim-l7-phG"/>
+                        <outlet property="playerView" destination="dRZ-Hs-NRh" id="o2w-dN-rLV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Du-VI-KnT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1.4778325123152709" y="2.3999999999999999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pause.fill" catalog="system" width="116" height="128"/>
+        <image name="play.fill" catalog="system" width="116" height="128"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
